--- a/styles/HexToBase64.module.css
+++ b/styles/HexToBase64.module.css
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 16px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   
   .label {
@@ -29,6 +30,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 3rem;
   }
   
   .output {
@@ -41,9 +43,9 @@
   }
 
   .imageLink {
-    margin-left: 8px;
-    font-size: 12px;
+    font-size: 2rem;
     color: #0070f3;
-    text-decoration: none;
-    margin-top: 24px;
+    text-decoration: underline;
+    padding: 2rem;
+    display: inline-block;
   }
