--- a/styles/HexToBase64.module.css
+++ b/styles/HexToBase64.module.css
@@ -7,7 +7,7 @@
   
   .inputContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -23,12 +23,12 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 480px;
+    min-width: 320px;
   }
   
   .outputContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
   }
